[package]
name = "rasypt-lite-derive"
version = "1.0.2"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"

[dev-dependencies]
rasypt-lite-lib = { path = "../rasypt-lite-lib" }

[features]
# automatically clear secret fields on Drop. Consumers can opt out by disabling
# this feature; it is enabled by default.
zeroize = []
default = ["zeroize"]
