[package]
name = "rasypt-lite-lib"
version = "1.0.2"
edition = "2021"
description = "Jasypt-compatible PBEWithHMACSHA512AndAES_256 encryption/decryption"

[dependencies]
aes.workspace = true
anyhow.workspace = true
cbc.workspace = true
pbkdf2.workspace = true
hmac.workspace = true
sha2.workspace = true
rand = { workspace = true, features = ["default", "thread_rng"] }
base64.workspace = true
unicode-normalization.workspace = true
zeroize.workspace = true
thiserror.workspace = true
